# nov7zephyr

zephyr/samples/anyledger/anyledger-wallet/: CMakeLists.txt
zephyr/samples/anyledger/anyledger-wallet/cmake/: trezor-crypto.cmake  zephyr.cmake
zephyr/samples/anyledger/anyledger-wallet/eth/: CMakeLists.txt
zephyr/samples/anyledger/anyledger-wallet/tests/: TestContract.sol
zephyr/samples/anyledger/anyledger-wallet/zephyr/: sensor_service.c
zephyr/samples/anyledger/anyledger-wallet/zephyr/contracts/: Token.sol
